--- a/.github/workflows/node.blish-github-packages.yml
+++ b/.github/workflows/node.blish-github-packages.yml
@@ -1,17 +1,26 @@
 name: NASA PROJECT CI
+
 on:
-   push:
-       branches: [ master ]
-   pull_request:
-           branches: [ master ]
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
+
 jobs:
   build:
     runs-on: windows-latest
+
     steps:
-      -uses: actions/checkout@v2
-      -name: Use Node.js version 22.7.0
-      -uses: actions/setup-node@v2
-      with:
-         node-version: '22.7.0'
-      -run: npm install
-      -run: npm run build --prefix client   
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Use Node.js version 22.7.0
+        uses: actions/setup-node@v2
+        with:
+          node-version: '22.7.0'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build client
+        run: npm run build --prefix client
